--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,6 +72,7 @@
                 android:text="ONLY FOR TESTING"
                 android:textColor="@color/dullWhile"
                 android:textSize="32sp"
+                android:visibility="gone"
                 android:textStyle="bold" />
 
             <TextView
