--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.kmc.ui.SectionA1Activity" />
+            type="edu.aku.hassannaqvi.kmc_screening.ui.SectionA1Activity" />
     </data>
 
     <ScrollView
